# calculus-core

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.agent/: instructions.md
.devcontainer/: devcontainer.json
.github/workflows/: bump.yml  ci.yml  release.yml
docs/: architecture.md  evolution_journal.md
notebooks/: Matos.ipynb  Ramos.ipynb  Schulze_Tami.ipynb  aoki_velloso_1975.ipynb  decourt_quaresma.ipynb
src/: app.py
src/calculus_core/: __init__.py  aoki_velloso.py  decourt_quaresma.py  main.py  models.py  teixeira.py  utils.py
tests/: test_adapters.py  test_calculations.py  test_domain.py  test_method_registry.py  test_pile_catalogs.py  test_pile_types.py  test_readme_examples.py  test_soil_investigation.py  test_soil_types.py
