[project]
name = "calculus-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaio Silva", email = "98492492+kaiosilva-dataeng@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
calculus-core = "calculus_core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# (I)-> iSort, (F)->PyFlakes, (E,W)-> PyCodeStyle,(PL)->Pylint, (PT)->Pytest-style
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"test_*.py" = ["E501"]
"conftest.py" = ["E501"]

[tool.ruff.format]
quote-style = 'single'
