[project]
name = "calculus-core"
version = "0.4.0"
description = "Foundation load capacity calculation engine using semi-empirical methods"
readme = "README.md"
authors = [
    { name = "Kaio Silva", email = "98492492+kaiosilva-dataeng@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.46.0",
    "pandas>=2.3.0",
    "altair>=5.5.0",
]

[project.scripts]
calculus-app = "calculus_core.entrypoints.cli:run_app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.6",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR0913', 'PLR2004', 'PLC0415', 'E501', 'PLR0911']

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ['PLR2004']

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
check = 'pre-commit run --all-files'
test = 'pytest -s -x --cov=src/calculus_core -vv'
post_test = 'coverage html'
